--- a/works.html
+++ b/works.html
@@ -29,7 +29,7 @@
 <br>
 <div class="gallery">
 	<div class="gallery__column25">
-		<a class="gallery__link" href="https://rogergibertrovira.github.io/pokeballs.html" target="_blank">
+		<a class="gallery__link" href="https://rogergibertrovira.github.io/pokeballs.html">
 <!-- IMAGE -->
 			<figure class="gallery__thumb">
 				<img src="images/works/pokeballs/1.png" class="gallery__image">
