--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="gallery">
 
 <!-- COLUMN 1 -->
-	<div class="gallery__column">
+	<div class="gallery__column33">
 		<a href="https://roger-gibert.itch.io/awaken" target="_blank" class="gallery__link">
 			<figure class="gallery__thumb">
 				<img src="images/games/awaken.png" alt="Awaken cover image" class="gallery__image">
@@ -42,7 +42,7 @@
 	</div>
 
 <!-- COLUMN 2 -->
-	<div class="gallery__column">
+	<div class="gallery__column33">
 		<a href="https://ironia.itch.io/one-man-land" target="_blank" class="gallery__link">
 			<figure class="gallery__thumb">
 				<img src="images/games/onemanland.png" alt="One Man Land cover image" class="gallery__image">
@@ -52,7 +52,7 @@
 	</div>
 
 <!-- COLUMN 3 -->
-	<div class="gallery__column">
+	<div class="gallery__column33">
 		<a href="https://ironia.itch.io/bloodtrip" target="_blank" class="gallery__link">
 			<figure class="gallery__thumb">
 				<img src="images/games/bloodtrip.png" alt="Blood Trip cover image" class="gallery__image">
@@ -61,9 +61,10 @@
 		</a>
 	</div>
 
-<!-- COLUMN 4 -->
+<!-- COLUMN 4
 	<div class="gallery__column">
 	</div>
+	-->
 
 </div>
 
