--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,9 @@
 					Hi! I'm Roger, and I'm a Game Developer.
 				</p>
 				<h2>CONTACT ME</h2>
-					<span class="long-text">Email: </span><span class="long-text-bold">rogergibert8@gmail.com </span>
+					<span class="long-text">Email: </span>
+					<a class="long-text-bold"href="mailto:rogergibert8@gmail.com" target="_blank">rogergibert8@gmail.com</a>
+					<!--<span class="long-text">Email: </span><span class="long-text-bold">rogergibert8@gmail.com </span>-->
 					<br><br>
 					<span class="long-text">LinkedIn: </span>
 					<a class="long-text-bold"href="https://www.linkedin.com/in/roger-gibert-rovira-developer/" target="_blank"> linkedin.com/in/roger-gibert-rovira-developer</a>
